# taiwan-futures-data

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: update-history-data.yml
data/csv/: Daily_2024_11_05.csv  Daily_2024_11_06.csv  Daily_2024_11_07.csv  Daily_2024_11_08.csv  Daily_2024_11_11.csv  Daily_2024_11_12.csv  Daily_2024_11_13.csv  Daily_2024_11_14.csv  Daily_2024_11_15.csv  Daily_2024_11_18.csv  Daily_2024_11_19.csv  Daily_2024_11_20.csv  Daily_2024_11_21.csv  Daily_2024_11_22.csv  Daily_2024_11_25.csv  Daily_2024_11_26.csv  Daily_2024_11_27.csv  Daily_2024_11_28.csv  Daily_2024_11_29.csv  Daily_2024_12_02.csv  Daily_2024_12_03.csv  Daily_2024_12_04.csv  Daily_2024_12_05.csv  Daily_2024_12_06.csv  Daily_2024_12_09.csv  Daily_2024_12_10.csv  Daily_2024_12_11.csv  Daily_2024_12_12.csv  Daily_2024_12_13.csv  Daily_2024_12_16.csv  Daily_2024_12_17.csv  Daily_2024_12_18.csv  Daily_2024_12_19.csv  Daily_2024_12_20.csv  Daily_2024_12_23.csv  Daily_2024_12_24.csv  Daily_2024_12_25.csv  Daily_2024_12_26.csv  Daily_2024_12_27.csv  Daily_2024_12_30.csv  (+18 more)
taiwan_futures/: download.py  transform.py
